# neural-network

./: .gitignore  CMakeLists.txt  README.md
src/main/: main.cc
src/matrix/: matrix.cc  matrix.hh  test_matrix.hpp
src/neural_network/: neural_network.cc  neural_network.hh
src/utils/: constants.hh  op_overloading.cc  op_overloading.hh
